--- a/GenUI/gen-ui/package.json
+++ b/GenUI/gen-ui/package.json
@@ -30,6 +30,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
+    "axios": "^1.6.8",
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "14.0.2",
@@ -41,6 +42,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-mathjax2": "^0.0.2",
+    "react-toastify": "^10.0.5",
     "tailwind-variants": "^0.1.18",
     "tailwindcss": "3.3.5",
     "typescript": "5.0.4"
